--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -16,7 +16,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:text="Automatically disable notification and recording when you are at home"
+                android:text="Automatically disable event check when you are at home"
                 android:textAppearance="?android:attr/textAppearanceMedium"/>
     </LinearLayout>
 
