--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,25 +5,13 @@
               android:layout_height="fill_parent"
         >
 
-    <LinearLayout
-            android:orientation="horizontal"
+    <ListView
+            android:id="@+id/linklist"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-        <CheckBox
-                android:id="@+id/do_certification"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Automatically disable event check when you are at home"
-                android:textAppearance="?android:attr/textAppearanceMedium"/>
-    </LinearLayout>
-
-    <Button
-            android:id="@+id/conf_button"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Detailed setting"/>
+            android:textAppearance="?android:attr/textAppearanceMedium">
+
+    </ListView>
+
 </LinearLayout>
 
